--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,12 +223,15 @@ body {
 .header_menu ul li:hover a {
   color: #0ad3ef;
 }
+.header_menu ul li:hover i {
+  color: #0ad3ef;
+}
 
 .header_menu li a::before {
   content: "";
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 12px;
   height: 3px;
   width: 0%;
   background: #0ad3ef;
@@ -237,7 +240,7 @@ body {
 }
 
 .header_menu li a:hover:before {
-  width: 100%;
+  width: 70%;
 }
 
 .sub_menu_parent {
@@ -250,10 +253,13 @@ body {
 .sub_menu_parent .submenu_ul {
   display: none;
   position: absolute;
-  width: 150px;
+  width: 250px;
   background-color: var(--secondary-color);
   top: 43px;
   right: -50px;
+}
+.sub_menu_parent .submenu_ul li a:hover:before {
+  width: 0%;
 }
 .sub_menu_parent .submenu_ul li:hover {
   background-color: unset;
@@ -2048,4 +2054,49 @@ footer .footer_ending .container .bannar_text {
   text-align: start;
   margin: 0px;
   padding: 0px;
+}
+
+.critical_problem_solution .blog_side_bar {
+  margin-top: 0px;
+  margin-bottom: auto;
+}
+
+.critical_problem_archive {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+@media only screen and (min-width: 992px) {
+  .critical_problem_archive {
+    flex-wrap: wrap;
+    overflow-x: unset;
+  }
+}
+.critical_problem_archive .col-md-6 {
+  padding-bottom: 20px;
+  min-width: 100%;
+}
+@media only screen and (min-width: 600px) {
+  .critical_problem_archive .col-md-6 {
+    min-width: 48%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .critical_problem_archive .col-md-6 {
+    min-width: unset;
+  }
+}
+.critical_problem_archive img {
+  width: 90%;
+}
+.critical_problem_archive .our_team_info {
+  padding-left: 20px;
+  text-align: left;
+}
+.critical_problem_archive .our_team_info .our_team_heading {
+  padding: 10px 0px;
+}
+.critical_problem_archive .our_team_info .card-text {
+  text-align: left;
+  padding-bottom: 10px;
 }/*# sourceMappingURL=style.css.map */
